[package]
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
categories = ["embedded", "no-std"]
description = "A fork of `ufmt` tweaked to play nice with the eBPF kernel verifier"
documentation = "https://docs.rs/aya-ufmt"
edition = "2018"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt"
readme = "README.md"
repository = "https://github.com/aya-rs/aya-ufmt"
version = "0.1.0"

[dependencies]
proc-macro-hack = "0.5.11"
ufmt-macros = { path = "macros", version = "0.1.0" }
ufmt-write = { path = "write", version = "0.1.0" }

# NOTE do NOT add an `alloc` feature before the alloc crate can be used in
# no-std BINARIES
[features]
# NOTE do NOT turn `std` into a default feature; this is a no-std first crate
std = ["ufmt-write/std"]

[[test]]
name = "vs-std-write"
required-features = ["std"]

[workspace]
members = [
  "macros",
  "utils",
  "write",
]
